src/index.css
/* ... */
.ant-radio-group .ant-radio-wrapper .ant-radio + * {
  padding: 0;
}

.ant-radio-group
  .ant-radio-wrapper
  .ant-radio.ant-radio-checked
  .ant-radio-inner {
  border-color: #232323;
}

.ant-radio-group
  .ant-radio-wrapper
  .ant-radio.ant-radio-checked
  .ant-radio-inner::after {
  transform: scale(1);
}

.ant-select-dropdown .ant-select-item img {
  margin-right: 8px;
}

/*Ant Select Search*/
/* .ant-select .ant-select-selector .ant-select-selection-search {
  position: absolute;
  padding: 16px 0 16px 16px;
  left: 0;
  right: 40px;
} */

.ant-select .ant-select-selector .ant-select-selection-search {
  padding: 0;
  top: 0;
  left: 0;
  right: 40px;
  margin: 0;
}

.ant-select
  .ant-select-selector
  .ant-select-selection-search
  .ant-select-selection-search-input {
  height: 20px;
}

.ant-select .ant-select-selector .ant-select-selection-placeholder {
  font-family: "Montserrat";
  font-weight: 500;
  font-size: 14px;
  line-height: 20px;
  color: rgba(107, 107, 107, 0.6);
}

/**--MODAl---------*/
.ant-modal-content {
  border-radius: 8px !important;
  background-color: #f7f7f7 !important;
}

.ant-table {
  box-shadow: none !important;
}

.ant-select-show-search.ant-select-multiple .ant-select-selector {
  padding-top: 13px;
  padding-bottom: 13px;
  height: auto;
  min-height: 54px;
}

.ant-select-show-search.ant-select-multiple
  .ant-select-selection-overflow-item
  .ant-select-selection-item {
  margin: 0;
  font-family: "Montserrat";
  font-weight: 500;
  font-size: 12px;
  line-height: 15px;
  text-align: center;
  color: #fff;
  position: relative;
  padding: 6px 28px 6px 14px;
  border-radius: 8px;
  background: #232323;
  display: inline-flex;
  height: auto;
  border: none;
}

.ant-select-show-search.ant-select-multiple
  .ant-select-selection-overflow-item
  .ant-select-multiple
  .ant-select-selection-item-content {
  color: inherit;
  font-size: inherit;
  line-height: inherit;
  padding: 0;
  border-radius: 0;
}

.ant-select-show-search.ant-select-multiple
  .ant-select-selection-overflow-item
  .ant-select-selection-item
  .ant-select-selection-item-remove {
  color: #fff;
  position: absolute;
  top: 7px;
  right: 10px;
  border: none;
  border-radius: 0;
  box-shadow: none;
  background: transparent;
  padding: 0;
  margin: 0;
  font-size: 10px;
  line-height: 10px;
}

.ant-select-show-search.ant-select-multiple
  .ant-select-selection-overflow-item
  .ant-select-selection-item
  .ant-select-selection-item-remove
  svg {
  width: 13px;
  height: 13px;
}

.ant-select-show-search.ant-select-multiple .ant-select-selection-overflow {
  gap: 8px;
}

/*antd model*/
.engagementModalStyle .ant-modal-content {
  background: #ffffff !important;
  box-shadow: 0px 1.91653px 7.66613px rgba(204, 238, 204, 0.25);
}

.engagementModalStyle .ant-modal-body {
  padding: 0px !important;
}

.engagementBillRateModal .ant-modal-content,
.engagementPayRateModal .ant-modal-content,
.engagementAddFeedbackModal .ant-modal-content,
.engagementReplaceTalentModal .ant-modal-content,
.statusModalWrap .ant-modal-content,
.convert-dp-modal-wrap .ant-modal-content,
.convert-contractual-modal-wrap .ant-modal-content,
.incentiveHierarchyModal .ant-modal-content,
.updateTRModal .ant-modal-content,
.commonModalWrap .ant-modal-content {
  background: #ffffff !important;
  box-shadow: 0px 1.91653px 7.66613px rgba(204, 238, 204, 0.25) !important;
  border-radius: 8px !important;
  padding: 40px !important;
}

.engagementBillRateModal .ant-modal-body,
.engagementPayRateModal .ant-modal-body,
.engagementAddFeedbackModal .ant-modal-body,
.engagementReplaceTalentModal .ant-modal-body,
.statusModalWrap .ant-modal-body,
.convert-dp-modal-wrap .ant-modal-body,
.convert-contractual-modal-wrap .ant-modal-body,
.incentiveHierarchyModal .ant-modal-body,
.updateTRModal .ant-modal-body,
.commonModalWrap .ant-modal-body {
  padding: 0px;
}

.engagementReplaceTalentModal
  .ant-radio-group
  .ant-radio-wrapper
  .ant-radio
  + * {
  padding: 0;
  font-family: "Montserrat";
  font-style: normal;
  font-weight: 400;
  font-size: 14px;
  line-height: 17px;
  color: #676767;
}

.engagementReplaceTalentModal .ant-tabs-nav {
  border-bottom: 1px solid #cecccc;
}

.engagementReplaceTalentModal .ant-tabs-content-holder {
  margin-top: 24px;
}

/*Share Feedback Modal*/
.ant-modal-centered {
  padding: 30px 0;
  z-index: 6666;
}

.interviewFeedbackModal .ant-modal-body,
.cloneHRModal .ant-modal-body {
  padding: 40px;
}

.interviewFeedbackModal .ant-modal-content,
.interviewScheduleModal .ant-modal-content,
.interviewRescheduleModal .ant-modal-content,
.cloneHRModal .ant-modal-content {
  background: #ffffff !important;
}

.interviewFeedbackModal .ant-checkbox-wrapper {
  line-height: 20px;
  align-items: center;
}

.interviewFeedbackModal .ant-checkbox {
  top: 0;
}

.interviewFeedbackModal .ant-checkbox-inner {
  border: 1px solid #232323 !important;
  border-radius: 5px;
  width: 20px;
  height: 20px;
}

.interviewFeedbackModal .ant-checkbox-checked .ant-checkbox-inner {
  border-color: var(--color-sunlight) !important;
}

.interviewFeedbackModal .ant-checkbox + span {
  font-family: "Montserrat";
  font-style: normal;
  font-weight: 500;
  font-size: 14px;
  line-height: 17px;
  color: #232323;
}

.interviewFeedbackModal .ant-checkbox-inner::after {
  left: 5px;
  top: 9px;
}

.ant-switch-checked {
  background-color: var(--color-sunlight) !important;
}

.selectSalesManagerModal .ant-modal-close {
  display: none;
}

.teamDemandFunnelReport .ant-tree,
.teamDemandFunnelReport .ant-tree-show-line,
.teamDemandFunnelReport .ant-tree-switcher {
  background-color: transparent;
}

.textCenter {
  text-align: center;
}

.mainLoader {
  display: flex;
  align-items: center;
  justify-content: center;
  height: calc(100vh - 300px);
}

.disabledTransparentBtnGroup {
  opacity: 0.5;
  cursor: no-drop;
}

/**   See Feedback */
.seeFeedback .ant-modal-content .ant-modal-body {
  padding: 0 !important;
}
/* ... */

